--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>RUM</title>
 </head>
 <body>
-    <script src="src/script.js"></script>
+    Откройте консоль браузера, там все результаты в красивых табличках!
+    <script src="src/index.js"></script>
 </body>
 </html>
