--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     Откройте консоль браузера, там все результаты в красивых табличках!
+    (Если нет - обновите страничку, всё должно заработать)
     <script src="src/index.js"></script>
 </body>
 </html>
